# HydrophilaPhage

./: .Rbuildignore  .gitignore  CLAUDE.md  DESCRIPTION  HANDOFF-h1-evo-zeroshot.md  README.Rmd  README.md
R/: app_config.R  app_ui.R  mod_module1.R  utils.R
analyses/: .gitignore  01-import.qmd  11-bacterial_genome.qmd  111-bacterial_genome.qmd  112-phage_genome.qmd  113-tree.qmd  12-phage_genome.qmd  121-figs.qmd  13-tree.qmd  21-figs.qmd  401-collect.qmd  402-dereplicate.qmd  403-annotate.qmd  404-safety.qmd  405-enzymes.qmd  406-master_table.qmd  501-aeromonas_pangenome.qmd  601-safety_platform.qmd  701-virome_landscape.qmd  README.Rmd  README.md  _quarto.yml  manuscript.qmd
dev/: 01_start.R  02_dev.R  codon_opt_hp3.py
docs/: enzybiotic-synthesis-proposal.md  gcatbio-cover-note.md  gcatbio-orf-order-hp3.fasta  gcatbio-orf-order-hp3.md
inst/: golem-config.yml
manuscript/: .adversarial-review-state.json  .latexmkrc  ADVERSARIAL_HANDOFF.md  Makefile  anonymize.py  body-cr.tex  body.tex  compliance_report_cell-reports.md  compliance_report_iscience.md  compliance_report_microbial-biotechnology.md  cover_letter-cr-deng.md  cover_letter-cr.tex  cover_letter-iscience-deng.docx  cover_letter-iscience-deng.md  cover_letter-mjs.tex  cover_letter.docx  cover_letter.tex  de_ai_suggestions.md  for-authors.txt  make_reference_docx.py  manuscript-cr.tex  manuscript-flat.tex  manuscript.tex  mb-SUBMISSION_CHECKLIST.md  prep_docx.py  refs_mb.bib  (+7 more)
platform/: Dockerfile  README.md  pyproject.toml
platform/src/aquaphage_platform/: __init__.py  db.py  main.py  models.py
(+65 files in other folders)
