[project]
name = "aquaphage-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rujinlong", email = "jinlong.ru+m1@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
aquaphage-platform = "aquaphage_platform:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
